--- a/PianoGames/PianoGames/src/html/pianoGames.html
+++ b/PianoGames/PianoGames/src/html/pianoGames.html
@@ -7,7 +7,7 @@
 <body>
 
     <div class="loader">
-        <label id="game-init-label" for="game-init">Loadging...</label>
+        <label id="game-init-label" for="game-init">Loading...</label>
         <progress id="game-init-progress" value="1" max="100"></progress>
     </div>
 
